kubernetes-templates/facade-k8s/facade-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facade-k8s-deployment
  namespace: facade-k8s
  labels:
    app: facade-k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: facade-k8s-app
  template:
    metadata:
      labels:
        app: facade-k8s-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: facade-k8s 
        image: [img-url]
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
